--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-chartkick",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Create beautiful charts with one line in Vue.js",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "vue": "*",
+    "vue": ">=2.0.0",
     "chartkick": ">=2.2.0"
   },
   "authors": [
