--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-chartkick",
   "version": "0.2.0",
-  "description": "Create beautiful charts with one line in Vue.js",
+  "description": "Create beautiful JavaScript charts with one line of Vue",
   "main": "index.js",
   "scripts": {
     "build": "webpack"
