--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Create beautiful JavaScript charts with one line of Vue",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "eslint src"
   },
   "license": "MIT",
   "peerDependencies": {
-    "vue": ">=2.0.0",
-    "chartkick": ">=2.2.0"
+    "chartkick": ">=2.2.0",
+    "vue": ">=2.0.0"
   },
   "authors": [
     "ankane"
@@ -22,6 +23,11 @@
     "dist"
   ],
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.18.1",
     "webpack": "^3.8.1"
-  }
+  },
+  "dependencies": {}
 }
