--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "vue-chartkick",
   "version": "0.2.1",
   "description": "Create beautiful JavaScript charts with one line of Vue",
-  "main": "index.js",
+  "main": "dist/vue-chartkick.js",
+  "module": "dist/vue-chartkick.esm.js",
   "scripts": {
-    "build": "webpack",
+    "build": "rollup -c",
     "lint": "eslint src"
   },
   "license": "MIT",
@@ -23,11 +24,11 @@
     "dist"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
     "eslint": "^4.18.1",
-    "webpack": "^3.8.1"
-  },
-  "dependencies": {}
+    "rollup": "^0.57.1",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-uglify": "^3.0.0"
+  }
 }
