--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "chartkick": ">=2.2.0",
     "vue": ">=2.0.0"
   },
   "authors": [
@@ -30,5 +29,8 @@
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^3.0.0"
+  },
+  "dependencies": {
+    "chartkick": "file:/Users/andrew/open_source/chartkick.js"
   }
 }
