Fixed unnecessary re-renders for literal props

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rollup-plugin-uglify": "^3.0.0"
   },
   "dependencies": {
-    "chartkick": "^2.3.5"
+    "chartkick": "^2.3.5",
+    "deep-equal": "^1.0.1"
   }
 }
