--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "chartkick": "^2.3.6",
-    "deep-equal": "^1.0.1"
+    "deep-equal": "^1.0.1",
+    "deepmerge": "^2.1.1"
   }
 }
