--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "eslint": "^8.8.0",
     "rollup": "^2.67.0",
-    "rollup-plugin-uglify": "^6.0.2"
+    "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
     "chartkick": ">=3.2.0"
