--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "dist"
   ],
   "devDependencies": {
-    "@rollup/plugin-buble": "^0.21.1",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-buble": "^1.0.1",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.2.1",
     "eslint": "^8.8.0",
-    "rollup": "^2.67.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup": "^3.9.1"
   },
   "dependencies": {
     "chartkick": ">=3.2.0"
