--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     }
   },
   "scripts": {
-    "build": "rollup -c",
-    "lint": "eslint src"
+    "build": "rollup -c"
   },
   "license": "MIT",
   "peerDependencies": {
@@ -34,7 +33,6 @@
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.4",
-    "eslint": "^9.14.0",
     "rollup": "^4.25.0"
   },
   "dependencies": {
